// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableInput Snapshots Input field with error message 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
  border: 1px solid #D8534F;
  background-color: rgba(216,83,79,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  line-height: 1.4;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 0;
  color: #D8534F;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 12px;
}

.c6 {
  margin-left: 1em;
}

.c2 {
  width: 100%;
  padding: 1em;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c2::-moz-placeholder {
  color: #B4B4B4;
}

.c2:-ms-input-placeholder {
  color: #B4B4B4;
}

.c2::placeholder {
  color: #B4B4B4;
}

.c2::selection {
  background: rgba(241,102,34,0.1);
}

.c2::-ms-reveal {
  display: none;
}

.c0 {
  display: inline-block;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0em 1em;
  direction: ltr;
}

.c3 > button:first-of-type {
  margin-right: 0.5em;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      class="c2"
      name="Billing Email"
      placeholder="Billing Email"
      type="text"
      value="no-reply@lalamove.com"
    />
    <div
      class="c3"
    />
  </div>
  <div
    class="c4"
  >
    <span
      class="c5"
    >
      This is the error
    </span>
    <span
      class="c6"
    >
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:#D8534F;width:13px;height:13px"
        viewBox="0 0 217 217"
      >
        <title>
          Warning
        </title>
        <g>
          <rect
            fill="none"
            height="217"
            width="217"
          />
          <path
            d="M109,36.62a9.23,9.23,0,0,1,6.56,2.7,9.74,9.74,0,0,1,1.83,2.61,9.6,9.6,0,0,0,.65,1.12l70.43,122,.15.24a9.27,9.27,0,0,1-8,14.14l-.66,0c-.2,0-.41,0-.62,0h-.52l-141,0h-.56a9.24,9.24,0,0,1-8-4.62,9.29,9.29,0,0,1-.93-7.07l0-.05a8.74,8.74,0,0,1,1.26-2.73,8.13,8.13,0,0,0,.58-1L100.53,42c.12-.19.23-.38.34-.59a8.81,8.81,0,0,1,1.56-2.1A9.23,9.23,0,0,1,109,36.62M31.17,159.81h0M109,27.62A18.22,18.22,0,0,0,96.07,33a17.53,17.53,0,0,0-3.17,4.28h0L22.17,159.81v0a17.73,17.73,0,0,0-2.54,5.52,18.24,18.24,0,0,0,17.65,23h.56l141.53,0h0c.43,0,.85,0,1.28,0a18.27,18.27,0,0,0,15.62-27.89L125.49,38h0a18.68,18.68,0,0,0-3.53-5A18.22,18.22,0,0,0,109,27.62Z"
          />
          <circle
            cx="109"
            cy="158.63"
            r="9"
          />
          <path
            d="M118,131.5a9,9,0,0,1-18,0V77.37a9,9,0,0,1,18,0Z"
          />
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`EditableInput Snapshots Input field with loading 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c2 {
  width: 100%;
  padding: 1em;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c2::-moz-placeholder {
  color: #B4B4B4;
}

.c2:-ms-input-placeholder {
  color: #B4B4B4;
}

.c2::placeholder {
  color: #B4B4B4;
}

.c2::selection {
  background: rgba(241,102,34,0.1);
}

.c2::-ms-reveal {
  display: none;
}

.c0 {
  display: inline-block;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0em 1em;
  direction: ltr;
}

.c3 > button:first-of-type {
  margin-right: 0.5em;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      class="c2"
      disabled=""
      name="Billing Email"
      placeholder="Billing Email"
      type="text"
      value="no-reply@lalamove.com"
    />
    <div
      class="c3"
    >
      <svg
        height="16"
        space="preserve"
        viewBox="0 0 50 50"
        width="16"
      >
        <path
          d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z"
          fill="#F16622"
        >
          <animateTransform
            attributeName="transform"
            attributeType="xml"
            dur="0.6s"
            from="0 25 25"
            repeatCount="indefinite"
            to="360 25 25"
            type="rotate"
          />
        </path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EditableInput Snapshots Input field with normal state 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c2 {
  width: 100%;
  padding: 1em;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c2::-moz-placeholder {
  color: #B4B4B4;
}

.c2:-ms-input-placeholder {
  color: #B4B4B4;
}

.c2::placeholder {
  color: #B4B4B4;
}

.c2::selection {
  background: rgba(241,102,34,0.1);
}

.c2::-ms-reveal {
  display: none;
}

.c0 {
  display: inline-block;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0em 1em;
  direction: ltr;
}

.c3 > button:first-of-type {
  margin-right: 0.5em;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      class="c2"
      name="Billing Email"
      placeholder="Billing Email"
      type="text"
      value="no-reply@lalamove.com"
    />
    <div
      class="c3"
    />
  </div>
</div>
`;

exports[`EditableInput Snapshots Input field with success state 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c2 {
  width: 100%;
  padding: 1em;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c2::-moz-placeholder {
  color: #B4B4B4;
}

.c2:-ms-input-placeholder {
  color: #B4B4B4;
}

.c2::placeholder {
  color: #B4B4B4;
}

.c2::selection {
  background: rgba(241,102,34,0.1);
}

.c2::-ms-reveal {
  display: none;
}

.c0 {
  display: inline-block;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0em 1em;
  direction: ltr;
}

.c3 > button:first-of-type {
  margin-right: 0.5em;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      class="c2"
      name="Billing Email"
      placeholder="Billing Email"
      type="text"
      value="no-reply@lalamove.com"
    />
    <div
      class="c3"
    >
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:#19BC9B;width:20px;height:20px"
        viewBox="0 0 217 217"
      >
        <title>
          Success
        </title>
        <g>
          <rect
            fill="none"
            height="217"
            width="217"
          />
          <path
            d="M108,27a81,81,0,1,0,81,81A81,81,0,0,0,108,27Zm0,153a72,72,0,1,1,72-72A72,72,0,0,1,108,180Z"
          />
          <path
            d="M99.63,134.69a4.5,4.5,0,0,1-6.37,0l-.07-.07L69.33,110.7l-.17-.15a4.5,4.5,0,0,1,6.37-6.36l-.15-.15,21.07,21.29L140.38,81.4l.09-.09a4.5,4.5,0,0,1,6.37,6.37l.59-.74L99.69,134.68Z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
